feat: Items Database Management System - v0.7.1
Complete Items Database Management System implementation:

✅ Core Features:
- Full CRUD operations for items database
- Advanced filtering & search (type, rarity, name)
- Sortable table interface with pagination
- Equipment assignment to multiple characters
- Statistics dashboard with live item counts
- Modal-based operations (view, add, edit, delete)
- Color-coded badge system for types/rarities

✅ Technical Implementation:
- admin/admin_items.php - Main management interface
- admin/api_admin_items_crud.php - CRUD API endpoint
- css/admin_items.css - External stylesheet with badge system
- js/admin_items.js - Client-side functionality
- Fixed database connection paths for admin APIs

✅ Integration & Security:
- RESTful API design with proper error handling
- Transaction safety for data integrity
- Assignment validation prevents orphaned records
- Input validation and SQL injection prevention
- Admin role verification and session management

✅ User Experience:
- Gothic theme consistent with admin panels
- Mobile-responsive design
- Real-time filtering and search
- Visual hierarchy with color-coded badges
- Comprehensive error handling and feedback

Files Created: 4 new files
Files Modified: 6 existing files
Version: 0.7.0 → 0.7.1 (patch increment - new working feature)

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,8 @@
 # Valley by Night - Apache Configuration
 
 # Enable Rewrite Engine
-RewriteEngine On
+# TEMPORARILY DISABLED - Causing 404s on all .php files
+RewriteEngine Off
 
 # Force HTTPS (optional - uncomment if you want to force SSL)
 # RewriteCond %{HTTPS} off
